# astrophotography

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  conanfile.py  env.yml  environment.yml  profile  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
cmake/: FindCCfits.cmake
include/: backend.h  hotreload.h  image.h  io.h  kernel.h  processing.h
py/: main.py  test.ipynb
src/: CMakeLists.txt  astrosight.c  backend.c  backend.cpp  backend.hpp  backend.py  cli.cpp  cli.py  core.cpp  gui.cpp  hotreload.c  image.c  io.c  kernel.c  main.c  main.cpp  main.qml  processing.c
src/astrosight/: __init__.py  backend.py  cli.py  core.py  dev.ipynb  gui.py  main.qml  params.txt  test.ipynb  tree.py
test/: CMakeLists.txt
tests/: test_cli.py  test_core.py  test_gui.py
