[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "astrosight"
version = "0.1.0"
dependencies = [
	"astropy",
	"imageio",
	"matplotlib",
	"numpy",
	"opencv-python",
	"PySide6",
	"rawpy",
	"scipy",
	"tqdm"
]
requires-python = ">=3.8,<=3.12"
authors = [
	{ name = "Austin Lucas Lake", email = "53884490+austinlucaslake@users.noreply.github.com"}
]
maintainers = [
	{ name = "Austin Lucas Lake", email = "53884490+austinlucaslake@users.noreply.github.com"}
]
description = "Image processing application for astrophotography."
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["image processing", "application", "astrophotography"]
classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/austinlucaslake/astrosight.git"
Issues = "https://github.com/austinlucaslake/astrosight/issues"

[project.gui-scripts]
astrosight = "astrosight.gui:main"

[tool.pdm.dev-dependencies]
dev = [
    "multiprocess",
    "gitpython",
	"ipykernel",
    "ipywidgets",
    "pip",
    "pyinstaller",
	"pytest",
	"ruff"
]